--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -19,7 +19,7 @@
   .main {
     height: 500px;
     width: 100%;
-    background: url(../img/big/4.jpg) no-repeat center/cover;
+    background: url(../img/join/visual.jpg) no-repeat center/cover;
     text-align: center;
 
     h2 {
