--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 ul,
@@ -4297,13 +4298,15 @@ aside.pop span {
 }
 
 #header .inner > h1 > a {
-  font: bold 40px/1 "Oswald";
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: "Oswald";
   color: #ff6200;
 }
 
 #header .inner #gnb {
   position: absolute;
-  left: 250px;
+  left: 300px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -4321,7 +4324,9 @@ aside.pop span {
 #header .inner #gnb li a {
   display: block;
   padding: 14px 40px;
-  font: bold 14px/1 "Quicksand";
+  font-size: 1rem;
+  font-family: "Quicksand";
+  font-weight: 700;
   color: #fff;
 }
 
@@ -4343,7 +4348,8 @@ aside.pop span {
 }
 
 #header .inner .util li a {
-  font: 12px/1 "Quicksand";
+  font-size: 1rem;
+  font-family: "Quicksand";
   color: #999;
 }
 
@@ -4577,7 +4583,7 @@ main #visual .visual_slider .panel li .text_box span {
   position: relative;
   display: inline-block;
   overflow: hidden;
-  font-size: 18px;
+  font-size: 1rem;
   color: #fff;
 }
 
@@ -4585,15 +4591,20 @@ main #visual .visual_slider .panel li .text_box h2 {
   position: relative;
   overflow: hidden;
   margin: 50px 0;
-  font-size: 50px;
+  font-size: 3rem;
+  line-height: 1.2;
   color: #fff;
   font-family: 'Josefin Sans', sans-serif;
+}
+
+main #visual .visual_slider .panel li .text_box h2 strong {
+  font-size: 3rem;
 }
 
 main #visual .visual_slider .panel li .text_box p {
   position: relative;
   overflow: hidden;
-  font-size: 25px;
+  font-size: 2rem;
   color: #fff;
 }
 
@@ -4656,7 +4667,7 @@ main #visual .swiper-pagination span {
   width: 200px;
   opacity: 1;
   color: #111;
-  font-size: 20px;
+  font-size: 1.5rem;
   transition: 1s;
   padding: 25px;
   box-sizing: border-box;
@@ -4726,12 +4737,12 @@ main #new ul li .text_box {
 }
 
 main #new ul li .text_box h2 {
-  font-size: 20px;
+  font-size: 1.5rem;
   margin-bottom: 10px;
 }
 
 main #new ul li .text_box p {
-  font-size: 16px;
+  font-size: 1rem;
   margin-bottom: 20px;
   width: 200px;
   overflow: hidden;
@@ -4742,7 +4753,7 @@ main #new ul li .text_box p {
 }
 
 main #new ul li .text_box span {
-  font-size: 14px;
+  font-size: 0.7rem;
 }
 
 main #new ul li:nth-of-type(1) {
@@ -4825,11 +4836,11 @@ main #about .text_con .text_list li {
 }
 
 main #about .text_con .text_list li h3 {
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 main #about .text_con .text_list li p {
-  font-size: 20px;
+  font-size: 1.5rem;
   line-height: 1.2;
   margin-top: 30px;
 }
@@ -4837,7 +4848,7 @@ main #about .text_con .text_list li p {
 main #about .text_con .text_list li p strong {
   font-weight: 700;
   display: block;
-  font-size: 25px;
+  font-size: 1.5rem;
   margin-bottom: 30px;
   color: #8d8dd9;
 }
@@ -4920,10 +4931,7 @@ main #Sustainability .Sustain_box {
 
 main #Sustainability .Sustain_box h3 {
   color: #fff;
-}
-
-main #Sustainability .Sustain_box p {
-  color: #fff;
+  font-size: 1.5rem;
 }
 
 main #Sustainability .Sustainability_con {
@@ -4965,9 +4973,13 @@ main #Sustainability .Sustainability_con .s_con .Sustainability_slider ul li {
 }
 
 main #Sustainability .Sustainability_con .s_con .Sustainability_slider ul li h3 {
-  font-size: 30px;
+  font-size: 2rem;
   text-align: center;
   padding-bottom: 50px;
+}
+
+main #Sustainability .Sustainability_con .s_con .Sustainability_slider ul li p {
+  font-size: 1rem;
 }
 
 main #Sustainability .Sustainability_con .s_con .Sustainability_slider .Sus-pagination {
@@ -5051,7 +5063,7 @@ main #Sustainability .Sustainability_con .s_con .text_box {
 }
 
 main #Sustainability .Sustainability_con .s_con .text_box h3 {
-  font-size: 30px;
+  font-size: 2rem;
   text-align: center;
   padding-bottom: 50px;
 }
@@ -5064,6 +5076,7 @@ main #Sustainability .Sustainability_con .s_con .text_box p {
   padding: 10px 20px;
   width: 300px;
   margin: 0 auto;
+  font-size: 1rem;
 }
 
 main #Sustainability .Sustainability_con .s_con .text_box a {
@@ -5074,6 +5087,7 @@ main #Sustainability .Sustainability_con .s_con .text_box a {
   width: 200px;
   margin: 20px auto 0;
   border: 1px solid #f4f4f4;
+  font-size: 1rem;
 }
 
 main #Sustainability .Sustainability_con .s_con .text_box a i {
@@ -5109,6 +5123,7 @@ main #journal ul li .text_box {
 }
 
 main #journal ul li .text_box h3 {
+  font-size: 1rem;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -5119,6 +5134,7 @@ main #journal ul li .text_box h3 {
 
 main #journal ul li .text_box p {
   margin-top: 10px;
+  font-size: 1rem;
 }
 
 main #journal.on ul li .pic i {
@@ -5141,12 +5157,12 @@ main #bake .inner > div {
 }
 
 main #bake .inner > div h3 {
-  font-size: 20px;
+  font-size: 1.5rem;
   margin-bottom: 20px;
 }
 
 main #bake .inner > div p {
-  font-size: 16px;
+  font-size: 1rem;
   color: #aaa;
 }
 
@@ -5160,7 +5176,7 @@ main #bake .inner .left ul {
 
 main #bake .inner .left ul li {
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
 }
 
@@ -5204,7 +5220,7 @@ main #bake .inner .icon_list ul li i {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 3em;
+  font-size: 3rem;
 }
 
 main #bake .inner .icon_list ul li .text_box {
@@ -5272,12 +5288,12 @@ main #repair .inner .top_box .text_box {
 }
 
 main #repair .inner .top_box .text_box h3 {
-  font-size: 30px;
+  font-size: 2rem;
   margin-bottom: 30px;
 }
 
 main #repair .inner .top_box .text_box p {
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -5287,6 +5303,7 @@ main #repair .inner .top_box .text_box a {
   display: block;
   text-align: center;
   background: #d97a3f;
+  font-size: 1rem;
   color: #fff;
 }
 
@@ -5305,7 +5322,7 @@ main #repair .inner .bottom_box::after {
 }
 
 main #repair .inner .bottom_box h3 {
-  font-size: 30px;
+  font-size: 2rem;
   margin-bottom: 20px;
   float: right;
 }
@@ -5328,12 +5345,17 @@ main #repair .inner .bottom_box ul li {
   margin: 0 10px;
 }
 
+main #repair .inner .bottom_box ul li a {
+  cursor: auto;
+}
+
 main #repair .inner .bottom_box ul li .pic {
   height: 300px;
 }
 
 main #repair .inner .bottom_box ul li p {
   margin-top: 20px;
+  font-size: 1rem;
 }
 
 main #repair.on .inner::after {
@@ -5376,6 +5398,7 @@ main #island .inner .island_box {
 
 main #island .inner .island_box h3 {
   color: #fff;
+  font-size: 1.5rem;
 }
 
 main #island .inner .island_box p {
@@ -5396,7 +5419,7 @@ main #island .inner .island_con {
 main #island .inner .island_con .title {
   position: absolute;
   color: #fff;
-  font-size: 40px;
+  font-size: 2.5rem;
   left: 50%;
   bottom: 10px;
   transform: translate(-50%, -50%);
@@ -5419,11 +5442,12 @@ main #island .inner .island_con .island_slider ul li {
 }
 
 main #island .inner .island_con .island_slider ul li h3 {
-  font-size: 30px;
+  font-size: 1.5rem;
 }
 
 main #island .inner .island_con .island_slider ul li p {
   margin-top: 20px;
+  font-size: 1rem;
 }
 
 main #island .inner .island_con .island-prev {
@@ -5482,6 +5506,7 @@ main #sns .inner h3 a {
   padding: 40px 10px;
   box-sizing: border-box;
   font-weight: 700;
+  font-size: 1.5rem;
   color: #fff;
 }
 
@@ -5572,7 +5597,6 @@ main #sns .inner ul li .pic {
 #popup .cont {
   width: 100%;
   min-height: 150px;
-  font-size: 30px;
 }
 
 #popup .cont .pic {
@@ -5593,11 +5617,13 @@ main #sns .inner ul li .pic {
 
 #popup .cont .text_box h2 {
   color: #fff;
+  font-size: 3rem;
   font-family: "Josefin Sans", sans-serif;
 }
 
 #popup .cont .text_box p {
   margin-top: 20px;
+  font-size: 2.5rem;
   font-family: "Josefin Sans", sans-serif;
   color: #fff;
 }
@@ -5609,15 +5635,15 @@ main #sns .inner ul li .pic {
 
 #popup .wrap label {
   margin-left: 10px;
-  font: 12px/1;
+  font-size: 1rem;
   color: #fff;
 }
 
 #popup .close_btn {
   position: absolute;
   top: -3px;
-  right: -54px;
-  font-size: 14px;
+  right: -50px;
+  font-size: 0.7rem;
   background: #d97a3f;
   color: #fff;
   font-weight: 700;
@@ -5717,7 +5743,9 @@ main #sns .inner ul li .pic {
 
 #footer .inner h1 {
   float: left;
-  font: bold 24px/1 "Quicksand";
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: "Quicksand";
   color: #666;
 }
 
@@ -5731,14 +5759,18 @@ main #sns .inner ul li .pic {
 }
 
 #footer .inner ul li a {
-  font: bold 14px/1 "Quicksand";
+  font-size: 0.7rem;
+  font-weight: 700;
+  font-family: "Quicksand";
   color: #666;
 }
 
 #footer .inner address {
   float: left;
   width: 100%;
-  font: 14px/1.3 "Quicksand";
+  font-size: 0.7rem;
+  line-height: 1.3;
+  font-family: "Quicksand";
   color: #777;
   border-top: 1px solid #888;
   margin-top: 20px;
@@ -5749,7 +5781,8 @@ main #sns .inner ul li .pic {
 #footer .inner p {
   float: left;
   width: 100%;
-  font: 12px/1 "Quicksand";
+  font-size: 0.7rem;
+  font-family: "Quicksand";
   color: #777;
 }
 
@@ -5803,7 +5836,7 @@ main #sns .inner ul li .pic {
     left: 0;
   }
   #header .inner > h1 a {
-    font-size: 25px;
+    font-size: 1.5rem;
   }
   #header .inner .menuWeb {
     display: none;
@@ -5863,10 +5896,10 @@ main #sns .inner ul li .pic {
     width: 80%;
   }
   main #island .inner .island_con .title {
-    font-size: 30px;
+    font-size: 2rem;
   }
   main #island .inner .island_con .island_slider ul li h3 {
-    font-size: 25px;
+    font-size: 1.5rem;
   }
   main #island .inner .island_con .island-prev {
     width: 30px;
@@ -5898,7 +5931,7 @@ main #sns .inner ul li .pic {
   }
   main section > h2,
   main section .inner > h2 {
-    font-size: 2em;
+    font-size: 2rem;
     margin-bottom: 20px;
   }
   main #visual .visual_slider .panel li .text_box {
@@ -5907,14 +5940,14 @@ main #sns .inner ul li .pic {
     top: 20%;
   }
   main #visual .visual_slider .panel li .text_box span {
-    font-size: 14px;
+    font-size: 0.7rem;
   }
   main #visual .visual_slider .panel li .text_box h2 {
-    font-size: 35px;
+    font-size: 2rem;
     line-height: 1.5;
   }
   main #visual .visual_slider .panel li .text_box p {
-    font-size: 20px;
+    font-size: 1.5rem;
   }
   main #visual .swiper-pagination {
     width: 100%;
@@ -5922,8 +5955,19 @@ main #sns .inner ul li .pic {
   main #visual .swiper-pagination span {
     width: 33.3333%;
     height: 50px;
-    font-size: 14px;
+    font-size: 0.7rem;
     padding: 15px 0;
+  }
+  main #new .inner ul li {
+    width: 100%;
+    float: none;
+  }
+  main #new .inner ul li .pic {
+    height: 350px;
+  }
+  main #new .inner ul li .text_box {
+    bottom: 0;
+    padding: 10px;
   }
   main #about .inner {
     height: auto;
@@ -5944,7 +5988,7 @@ main #sns .inner ul li .pic {
     margin-left: 0;
   }
   main #about .inner .btn li a i {
-    font-size: 14px;
+    font-size: 0.7rem;
     line-height: 30px;
   }
   main #about .inner .text_con {
@@ -5957,13 +6001,13 @@ main #sns .inner ul li .pic {
     position: relative;
   }
   main #about .inner .text_con .text_list li .text_box h3 {
-    font-size: 20px;
+    font-size: 1.5rem;
   }
   main #about .inner .text_con .text_list li .text_box p {
-    font-size: 16px;
+    font-size: 1rem;
   }
   main #about .inner .text_con .text_list li .text_box p strong {
-    font-size: 18px;
+    font-size: 1.5rem;
     margin-bottom: 15px;
   }
   main #Sustainability .inner .Sustainability_con {
@@ -6029,7 +6073,7 @@ main #sns .inner ul li .pic {
     margin-bottom: 10px;
   }
   main #bake .inner .icon_list ul li i {
-    font-size: 2em;
+    font-size: 2rem;
   }
   main #bake .inner .icon_list ul li .text_box {
     padding-left: 40px;
@@ -6065,7 +6109,7 @@ main #sns .inner ul li .pic {
     margin-bottom: 30px;
   }
   main #repair .inner .bottom_box {
-    margin-top: 20px;
+    margin: 20px 0 0;
   }
   main #sns .inner h3 {
     position: absolute;
@@ -6078,6 +6122,7 @@ main #sns .inner ul li .pic {
   }
   main #sns .inner h3 a {
     padding: 20px 10px;
+    font-size: 1rem;
   }
   main #sns .inner ul {
     margin: 0;
@@ -6124,19 +6169,12 @@ main #sns .inner ul li .pic {
   main #visual .swiper-pagination span {
     padding: 10px 0;
   }
-  main #new ul li {
-    width: 100%;
-    float: none;
-  }
-  main #new ul li .pic {
-    height: 350px;
-  }
-  main #new ul li .text_box {
-    bottom: 0;
-    padding: 10px;
+  main #repair {
+    padding: 40px 0;
   }
   main #repair .inner::after {
-    height: 100%;
+    top: auto;
+    bottom: 0;
   }
   main #repair .inner .top_box .text_box {
     width: 90%;
@@ -6156,6 +6194,32 @@ main #sns .inner ul li .pic {
     margin: 0 0 30px;
     width: 100%;
   }
+  main #Sustainability .inner .Sustain_box {
+    display: none;
+  }
+  main #Sustainability .inner .Sustainability_con .s_con {
+    float: none;
+    width: 100%;
+    height: 200px;
+  }
+  main #Sustainability .inner .Sustainability_con .s_con .Sustainability_slider ul li {
+    padding: 15px;
+  }
+  main #Sustainability .inner .Sustainability_con .s_con .Sustainability_slider ul li h3 {
+    font-size: 1rem;
+    padding-bottom: 30px;
+  }
+  main #Sustainability .inner .Sustainability_con .s_con .text_box {
+    padding: 15px;
+  }
+  main #Sustainability .inner .Sustainability_con .s_con .text_box h3 {
+    padding-bottom: 20px;
+    font-size: 1rem;
+  }
+  main #Sustainability .inner .Sustainability_con .s_con .text_box p,
+  main #Sustainability .inner .Sustainability_con .s_con .text_box a {
+    font-size: 0.7rem;
+  }
   main #journal ul li {
     float: none;
     width: 100%;
@@ -6170,11 +6234,14 @@ main #sns .inner ul li .pic {
     height: 400px;
   }
   main #island .inner .island_box {
-    padding: 20px;
+    display: none;
   }
   main #island .inner .island_con {
-    height: 60%;
+    height: 80%;
     width: 90%;
+    bottom: auto;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
   main #island .inner .island_con .title {
     font-size: 30px;
